# patient-care-aggregator-reporting

./: Makefile  README.md  manifest_template.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: continuous-integration.yml
azure/: azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: run-tests.yml
proxies/live/apiproxy/: proxy.xml
proxies/live/apiproxy/policies/: FlowCallout.GetEnvironmentKeyValueMapData.xml  OAuthV2.VerifyAccessToken.xml  OAuthV2.VerifyAccessTokenAppLevel3OrCis2Aal3.xml  ServiceCallout.CallHealthcheckEndpoint.xml  VerifyApiKey.FromHeader.xml
proxies/live/apiproxy/proxies/: default.xml
proxies/live/apiproxy/targets/: target.xml
proxies/sandbox/apiproxy/: proxy.xml
sandbox/: app.js  app.spec.js  package-lock.json  package.json
scripts/: build_proxy.sh
specification/: patient-care-aggregator-reporting.yaml
tests/: api_tests.py  test_endpoints.py
tests/configuration/: environment.py
