[tool.poetry]
name = "patient-care-aggregator-reporting"
version = "0.0.1-alpha"
description = "TODO"
authors = [
    #TODO add authors
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/patient-care-aggregator-reporting"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords
homepage = "https://internal-dev.api.service.nhs.uk/patient-care-aggregator-reporting"

[tool.poetry.dependencies]
python = "^3.10"
pytest-nhsd-apim = "^6.0.12"

[tool.poetry.dev-dependencies]
flake8 = "^7.1.1"
black = "^26.3.1"
pip-licenses = "^2.0.1"
jinja2 = "^3.1.6"
pyyaml = "^6.0.2"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.1.52"
pytest = "^8.3.5"
coverage = "^7.6.12"
aiohttp = "^3.12.14"
pytest-asyncio = "^0.24.0"
requests = "^2.32.4"
urllib3 = "^2.2.3"
idna = "^3.10"
pyjwt = "^2.10.1"

[tool.poetry.scripts]
